# pkaltim

./: README.md
docs/: submission-guide.md
teams/tim-01/: .env.example  README.md
teams/tim-01/app/Models/: Admin.php  Category.php  Destination.php  DestinationImage.php  Facility.php  Review.php
teams/tim-01/database/migrations/: 2025_01_22_010355_create_categories_table.php  2025_01_22_010356_create_destinations_table.php  2026_01_22_010354_create_admins_table.php  2026_01_22_010356_create_destination_images_table.php  2026_01_22_010356_create_facilities_table.php  (+3 more)
teams/tim-01/routes/: web.php
teams/tim-03/: .gitignore  README.md  SETUP.md  main.py  pyproject.toml
teams/tim-03/backend/: .gitignore  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py
teams/tim-03/backend/routes/: articles.py  auth.py  categories.py
teams/tim-03/database/: pkaltim_kuliner.sql
teams/tim-03/frontend/: index.html  package-lock.json  package.json
teams/tim-03/frontend/src/: style.css
teams/tim-03/frontend/src/api/: articles.js  auth.js  axios.js  categories.js
teams/tim-03/frontend/src/components/: ArticleCard.vue  Footer.vue  Navbar.vue
teams/tim-03/frontend/src/components/admin/: AdminLayout.vue
teams/tim-03/frontend/src/router/: index.js
teams/tim-03/frontend/src/views/: ArticleDetail.vue  Articles.vue  Home.vue  Login.vue
teams/tim-03/frontend/src/views/admin/: ArticleForm.vue  Articles.vue  Categories.vue  Dashboard.vue
teams/tim-05/: README.md
teams/tim-06/: README.md
teams/tim-09/: README.md
teams/tim-11/: README.md
(+31 files in other folders)
